# vimgym

./: .envrc  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  RELEASE.md  SPEC.md  install.sh  package-lock.json  package.json  pyproject.toml  vimgym-agent-prompt.md  vimgym-terminal-prototype.html  vimgym-ui-prototype.html  vimgym_landing_page.html
.github/workflows/: ci.yml  release.yml  test.yml
Formula/: vimgym.rb
completions/: _vg
defaults/: config.json  redaction-rules.json
docs/: DEVELOPER.md  GUIDE.md  PROJECT_PLAN.md  index.html
docs/archive/: SPEC.md
src/vimgym/: cli.py  config.py  daemon.py  db.py  events.py  server.py  watcher.py
src/vimgym.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/vimgym/pipeline/: metadata.py  orchestrator.py  parser.py  redact.py  summary.py
src/vimgym/storage/: export.py  queries.py  writer.py
src/vimgym/ui/: app.js  index.html  style.css
tests/: conftest.py  test_cli.py  test_cli_start_flags.py  test_config.py  test_config_v2.py  test_daemon.py  test_db.py  test_doctor.py  test_metadata.py  test_orchestrator.py  test_parser.py  test_queries.py  test_redact.py  test_server.py  test_sources_api.py  test_summary.py  test_ui.py  test_watcher.py  test_writer.py
tests/_fixture_tools/: sanitize.py
tests/fixtures/sessions/-Users-example-edforge/: 1fb8b1b8-6cb3-4e34-8446-fa60ba5df626.jsonl  3438c55b-0df0-4bc0-811e-561afcf19350.jsonl  64778c29-ae52-4fc1-acda-0bcde0cfa08b.jsonl  64b0bec2-912d-45f8-8bd3-f804ea250cf5.jsonl  68568954-72e5-4038-afba-958ffec228eb.jsonl  eaa3009a-c5ab-4015-a3e5-af26622652f9.jsonl
